# TubeSift

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md
src/tubesift/: __init__.py  __main__.py  browser.py  cli.py  config.py  doctor.py  extractor.py  formatter.py  ranking.py  resolver.py  search.py  storage.py  subtitles.py  tui.py  utils.py
tests/: test_extractor.py  test_resolver.py  test_search_engine.py  test_search_helpers.py  test_utils.py
